# nervepack

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  LICENSE  NOTICE  README.md  SECURITY.md
engine/: pyproject.toml
engine/nervepack_engine/: __init__.py  cli.py
engine/nervepack_engine/hooks/: __init__.py  backcapture_sweep.py  episodic_capture.py  episodic_recall.py  evaluator.py  (+11 more)
engine/onboard/: MCP.md  ONBOARD.md  capabilities.json
engine/setup/: 00-apt-baseline.sh  00-brew-baseline.sh  10-rustup.sh  20-claude-plugins.sh  21-prewarm-serena.sh  25-install-pii-deps.sh  30-link-skills.sh  35-link-dashboard-data.sh  40-sync-nervepack.sh  50-install-session-hook.sh  51-install-nervepack-directive-hook.sh  52-install-episodic-hooks.sh  53-install-lesson-hooks.sh  53-install-playbook-hooks.sh  54-install-evaluator-hook.sh  55-install-session-flush-hook.sh  56-install-backcapture-hook.sh  57-install-escalation-hook.sh  58-install-mcp.sh  59-install-skill-trigger-hook.sh  60-generate-index.sh  61-install-resume-hook.sh  62-install-scheduled-auth-token.sh  63-install-open-artifact-hook.sh  70-install-memory-cron.sh  70-install-memory-launchd.sh  70-install-memory-schtasks.sh  71-run-memory-promote.sh  72-run-episodic-maintain.sh  73-aggregate-metrics.sh  74-open-dashboard.sh  75-skill-maintain.sh  76-run-refine.sh  77-run-compact.sh  80-install-vscode-extensions.sh  90-install-claude-permissions.sh  91-remove-claude-permissions.sh  allowlist-entries.txt  episodic-capture.sh  episodic-match.sh  (+82 more)
(+301 files in other folders)
